# nfl

./: CLAUDE.md  README.md  TODO_SCRAPER.md  facts.txt  fantasy_analysis_2025_master.csv  future_enhancements.md  nfl_2024_schedule.csv  nfl_2024_schedule_corrected.csv  nfl_2024_teams.csv  players.ipynb  pyproject.toml  qb_analysis_2025.csv  rb_analysis_2025.csv  schedule.ipynb  te_analysis_2025.csv  teams.ipynb  teams.json  weekly.ipynb  wr_analysis_2025.csv
archive/: README.md  failed_games_corrections.csv  team_name_fixes.csv
nfl_2024_data/: 2024_season_advanced_passing.csv  2024_season_advanced_receiving.csv  2024_season_advanced_rushing.csv  2024_season_basic_offense.csv
nfl_2024_data/backup_20250812_022501/: 2024_season_advanced_passing_backup.csv  2024_season_advanced_receiving_backup.csv  2024_season_advanced_rushing_backup.csv  2024_season_basic_offense_backup.csv
project_history/: README.md
